force-app/main/default/objects/Lead/fields/Are_you_part_of_a_Real_Estate_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Are_you_part_of_a_Real_Estate_Brokerage__c</fullName>
    <label>Are you part of a Real Estate Brokerage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>