force-app/main/default/objects/Lead/fields/Cell_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone_Number__c</fullName>
    <label>Cell Phone Number</label>
    <type>Phone</type>
</CustomField>