force-app/main/default/objects/Lead/fields/Company_NMLS_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_NMLS_ID__c</fullName>
    <label>Company NMLS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>