force-app/main/default/objects/Lead/fields/CTI_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>CTI_Direct_Phone__c</fullName>
    <formula>IF(ISBLANK(Direct_Phone__c), &quot;&quot;, HYPERLINK(&quot;/apex/CallPopup?WhoId=&quot; &amp; Id &amp; &quot;&amp;PhoneNumber=&quot; &amp; Direct_Phone__c, IMAGE(&quot;/img/btn_dial_inline.gif&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial Direct Phone</label>
    <type>Text</type>
</CustomField>