force-app/main/default/objects/Lead/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Non-cooperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>