force-app/main/default/objects/Lead/fields/First_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Date__c</fullName>
    <label>First Activity Date</label>
    <type>Date</type>
</CustomField>