force-app/main/default/objects/Lead/fields/Last_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Referral_Date__c</fullName>
    <label>Last Referral Date</label>
    <type>Date</type>
</CustomField>