force-app/main/default/objects/Lead/fields/Partner_Domain__c.field-meta.xml
<CustomField>
    <fullName>Partner_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Domain</label>
    <type>Checkbox</type>
</CustomField>