force-app/main/default/objects/Lead/fields/Personal_NMLS_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_NMLS_ID__c</fullName>
    <label>Personal NMLS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>