force-app/main/default/objects/Lead/fields/Rocket_Pro_Partner__c.field-meta.xml
<CustomField>
    <fullName>Rocket_Pro_Partner__c</fullName>
    <label>Rocket Pro Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Farm</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Farmers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>