force-app/main/default/objects/Lead/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Attempt NC</fullName>
            </value>
            <value>
                <fullName>2nd Attempt NC</fullName>
            </value>
            <value>
                <fullName>3rd Attempt NC</fullName>
            </value>
            <value>
                <fullName>Interested - Follow Up</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Webinar Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>