force-app/main/default/objects/Lead/fields/zisf__ZoomInfo_Last_Clean_Run__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Last_Clean_Run__c</fullName>
    <description>Date/time refers to last time ZoomInfo Clean ran for record.</description>
    <inlineHelpText>Date/time refers to last time ZoomInfo Clean ran for record.</inlineHelpText>
    <label>ZoomInfo Last Clean Run</label>
    <type>DateTime</type>
</CustomField>