force-app/main/default/objects/Lead/fields/zisf__ZoomInfo_Trigger__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</description>
    <inlineHelpText>When this value is set to &quot;True&quot;, an incoming Lead with blank fields will be automatically appended with available data by ZoomInfo.</inlineHelpText>
    <label>ZoomInfo Trigger</label>
    <type>Checkbox</type>
</CustomField>