force-app/main/default/objects/Lead/recordTypes/Real_Estate.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate</fullName>
    <active>true</active>
    <businessProcess>RocketPro</businessProcess>
    <label>Real Estate</label>
</RecordType>