force-app/main/default/objects/Lead/recordTypes/Rocket_Professional.recordType-meta.xml
<RecordType>
    <fullName>Rocket_Professional</fullName>
    <active>true</active>
    <businessProcess>RocketPro</businessProcess>
    <label>Rocket Professional</label>
</RecordType>