force-app/main/default/objects/Lead/listViews/All_Leads_in_PDM_Queue.listView-meta.xml
<ListView>
    <fullName>All_Leads_in_PDM_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Original_Campaign__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>First_Activity_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>PDM</value>
    </filters>
    <label>All Leads in  PDM Queue</label>
</ListView>