force-app/main/default/objects/Lead/listViews/ARM_Team_Lead.listView-meta.xml
<ListView>
    <fullName>ARM_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>ARM Team</label>
    <queue>ARM_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>