force-app/main/default/objects/Lead/listViews/leads.listView-meta.xml
<ListView>
    <fullName>leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Slusser</value>
    </filters>
    <label>Slugger&apos;s Leads</label>
    <language>en_US</language>
    <sharedTo/>
</ListView>