force-app/main/default/objects/Lead/listViews/MRQ_s_Northeast.listView-meta.xml
<ListView>
    <fullName>MRQ_s_Northeast</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Alhussain,Slusser,Londo,Hill,Wilson,Smiatacz,Tetreault</value>
    </filters>
    <label>MRQ&apos;s - Northeast</label>
    <language>en_US</language>
</ListView>