force-app/main/default/objects/Lead/listViews/PDM_List_View.listView-meta.xml
<ListView>
    <fullName>PDM_List_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Converted,Not Interested</value>
    </filters>
    <label>PDM List View</label>
    <sharedTo>
        <role>State_Farm_PDM</role>
    </sharedTo>
</ListView>