force-app/main/default/objects/Lead/listViews/PDM_Team_Lead.listView-meta.xml
<ListView>
    <fullName>PDM_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>PDM Team</label>
    <queue>PDM_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>