force-app/main/default/objects/Lead/listViews/Unassigned_MRQs.listView-meta.xml
<ListView>
    <fullName>Unassigned_MRQs</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Direct_Phone__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Unassigned MRQs</label>
    <queue>Unassigned_MRQs</queue>
</ListView>